--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.card{
+  box-shadow: 5px 5px 5px grey !important;
+  border: 1px solid black !important;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-header{
+  background-color: #4AA3A3 !important;
+  border-bottom: 1px solid black !important;
+  text-shadow: 1.5px 1.5px 5px black;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-body{
+  background-color: #C0D8D8 !important;
 }
